[package]
name = "moonis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.2.1"
clap = "4.0.26"
combine = "4.6.6"
lunatic = "0.12.0"
lunatic-log = "0.3.0"
serde = { version = "1.0.147", features = ["derive"] }
